--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
 main {
   background-color: #24323c;
   width: 440px;
-  height: 440px;
   margin: 0 auto;
 }
 
@@ -70,6 +69,7 @@ main input {
    height: 55px;
    font-size: 17px;
    font-weight: 500;
+   margin-bottom: 25px;
  }
 
  input[type=submit]:disabled {
@@ -79,4 +79,8 @@ main input {
 
  .error {
    color: red;
+ }
+
+ .cong {
+   color: green;
  }
